--- a/vadak-bhashan-shala/index.html
+++ b/vadak-bhashan-shala/index.html
@@ -3,25 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SpeakMaster - Master Public Speaking Skills in Marathi & English</title>
+    <title>Orchid - Master Public Speaking Skills in Marathi & English</title>
     <meta name="description" content="Learn public speaking skills in Marathi and English with expert instructors. Comprehensive courses for ages 30-70. Transform your communication abilities today." />
-    <meta name="author" content="SpeakMaster" />
+    <meta name="author" content="Orchid" />
     <meta name="keywords" content="public speaking, Marathi speaking, English speaking, communication skills, presentation skills, Maharashtra, online learning" />
-    <link rel="canonical" href="https://speakmaster.com" />
+    <link rel="canonical" href="https://Orchid.com" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://speakmaster.com" />
-    <meta property="og:title" content="SpeakMaster - Master Public Speaking Skills in Marathi & English" />
+    <meta property="og:url" content="https://Orchid.com" />
+    <meta property="og:title" content="Orchid - Master Public Speaking Skills in Marathi & English" />
     <meta property="og:description" content="Learn public speaking skills in Marathi and English with expert instructors. Comprehensive courses for ages 30-70." />
-    <meta property="og:image" content="https://speakmaster.com/og-image.jpg" />
+    <meta property="og:image" content="https://Orchid.com/og-image.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://speakmaster.com" />
-    <meta property="twitter:title" content="SpeakMaster - Master Public Speaking Skills in Marathi & English" />
+    <meta property="twitter:url" content="https://Orchid.com" />
+    <meta property="twitter:title" content="Orchid - Master Public Speaking Skills in Marathi & English" />
     <meta property="twitter:description" content="Learn public speaking skills in Marathi and English with expert instructors. Comprehensive courses for ages 30-70." />
-    <meta property="twitter:image" content="https://speakmaster.com/og-image.jpg" />
+    <meta property="twitter:image" content="https://Orchid.com/og-image.jpg" />
   </head>
 
   <body>
